Closed Bug 228603 Opened 22 years ago Closed 21 years ago

nsIWebBrowserPersist should have a saveChannel method

Categories

(Core Graveyard :: Embedding: APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.8alpha4

People

(Reporter: Biesinger, Assigned: Biesinger)

References

Details

Attachments

(1 file, 1 obsolete file)

...looking something like this: void saveChannel(in nsIChannel aChannel, in nsIFile aTargetFile); it would AsyncOpen the channel and save it to aTargetFile, similar to the current saveURI. Reason for this: The current approach of having arguments for lots of stuff doesn't scale. if it turns out a caller needs something else to set, it currently has to add a new argument or is screwed.
taking...
Assignee: adamlock → cbiesinger
Target Milestone: --- → mozilla1.7alpha
Attached patch patch (obsolete) — Splinter Review
Attachment #137725 - Flags: review?(adamlock)
Status: NEW → ASSIGNED
Comment on attachment 137725 [details] [diff] [review] patch r=adamlock except for the nsID for nsIWebBrowserPersist being changed. There is no reason to change it.
adam: I changed the IID because I was breaking binary compatibility... with the changed IID, old callers of SaveDocument will fail to get the component, instead of crashing calling the wrong function
Comment on attachment 137725 [details] [diff] [review] patch (marking r=adamlock)
Attachment #137725 - Flags: superreview?(bz-vacation)
Attachment #137725 - Flags: review?(adamlock)
Attachment #137725 - Flags: review+
Comment on attachment 137725 [details] [diff] [review] patch actually this is not enough... nsWebBrowser needs a change too
Attachment #137725 - Flags: superreview?(bz-vacation)
Attachment #139245 - Flags: review?(adamlock)
Comment on attachment 139245 [details] [diff] [review] patch v2, also change nsWebBrowser r=adamlock
Attachment #139245 - Flags: review?(adamlock) → review+
Attachment #139245 - Flags: superreview?(darin)
Target Milestone: mozilla1.7alpha → mozilla1.8alpha4
Comment on attachment 139245 [details] [diff] [review] patch v2, also change nsWebBrowser sr=darin
Attachment #139245 - Flags: superreview?(darin) → superreview+
Checking in browser/webBrowser/nsWebBrowser.cpp; /cvsroot/mozilla/embedding/browser/webBrowser/nsWebBrowser.cpp,v <-- nsWebBrowser.cpp new revision: 1.142; previous revision: 1.141 done Checking in components/webbrowserpersist/public/nsIWebBrowserPersist.idl; /cvsroot/mozilla/embedding/components/webbrowserpersist/public/nsIWebBrowserPersist.idl,v <-- nsIWebBrowserPersist.idl new revision: 1.15; previous revision: 1.14 done Checking in components/webbrowserpersist/src/nsWebBrowserPersist.cpp; /cvsroot/mozilla/embedding/components/webbrowserpersist/src/nsWebBrowserPersist.cpp,v <-- nsWebBrowserPersist.cpp new revision: 1.98; previous revision: 1.97 done Checking in components/webbrowserpersist/src/nsWebBrowserPersist.h; /cvsroot/mozilla/embedding/components/webbrowserpersist/src/nsWebBrowserPersist.h,v <-- nsWebBrowserPersist.h new revision: 1.26; previous revision: 1.25 done
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: