Bug 228603 nsIWebBrowserPersist should have a saveChannel method r=adamlock sr=darin